--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -20,7 +20,9 @@ body {
 }
 
 a {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
   text-decoration: none;
 }
 
@@ -64,7 +66,8 @@ h6 {
   font-size: 24px;
   margin-bottom: 0;
   font-weight: 600;
-  color: #012970;
+  color: #000000
+;
 }
 
 /*--------------------------------------------------------------
@@ -77,7 +80,9 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 99999;
-  background: #4154f1;
+  background: #4c9c7c
+
+;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -236,7 +241,8 @@ h6 {
   padding: 20px 0 15px 0;
   font-size: 18px;
   font-weight: 500;
-  color: #012970;
+  color: #000000
+;
   font-family: "Poppins", sans-serif;
 }
 
@@ -282,7 +288,8 @@ h6 {
 }
 
 .accordion-button:not(.collapsed) {
-  color: #012970;
+  color: #000000
+;
   background-color: #f6f9ff;
 }
 
@@ -294,7 +301,9 @@ h6 {
 
 .accordion-flush .accordion-button:not(.collapsed) {
   box-shadow: none;
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .accordion-flush .accordion-body {
@@ -342,13 +351,19 @@ h6 {
 
 .nav-tabs-bordered .nav-link:hover,
 .nav-tabs-bordered .nav-link:focus {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .nav-tabs-bordered .nav-link.active {
   background-color: #fff;
-  color: #4154f1;
-  border-bottom: 2px solid #4154f1;
+  color: #4c9c7c
+
+;
+  border-bottom: 2px solid #4c9c7c
+
+;
 }
 
 /*--------------------------------------------------------------
@@ -370,9 +385,10 @@ h6 {
 }
 
 .logo span {
-  font-size: 26px;
+  font-size: 21px;
   font-weight: 700;
-  color: #012970;
+  color: #000000
+;
   font-family: "Nunito", sans-serif;
 }
 
@@ -391,7 +407,8 @@ h6 {
   font-size: 32px;
   padding-left: 10px;
   cursor: pointer;
-  color: #012970;
+  color: #000000
+;
 }
 
 .header .search-bar {
@@ -428,7 +445,8 @@ h6 {
 .header .search-form input {
   border: 0;
   font-size: 14px;
-  color: #012970;
+  color: #000000
+;
   border: 1px solid rgba(1, 41, 112, 0.2);
   padding: 7px 38px 7px 8px;
   border-radius: 3px;
@@ -451,7 +469,8 @@ h6 {
 }
 
 .header .search-form button i {
-  color: #012970;
+  color: #000000
+;
 }
 
 /*--------------------------------------------------------------
@@ -468,13 +487,15 @@ h6 {
 
 .header-nav .nav-icon {
   font-size: 22px;
-  color: #012970;
+  color: #000000
+;
   margin-right: 25px;
   position: relative;
 }
 
 .header-nav .nav-profile {
-  color: #012970;
+  color: #000000
+;
 }
 
 .header-nav .nav-profile img {
@@ -684,7 +705,9 @@ h6 {
   align-items: center;
   font-size: 15px;
   font-weight: 600;
-  color: #4154f1;
+  color: #4c9c7c
+
+;
   transition: 0.3;
   background: #f6f9ff;
   padding: 10px 15px;
@@ -694,11 +717,14 @@ h6 {
 .sidebar-nav .nav-link i {
   font-size: 16px;
   margin-right: 10px;
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .sidebar-nav .nav-link.collapsed {
-  color: #012970;
+  color: #000000
+;
   background: #fff;
 }
 
@@ -707,12 +733,16 @@ h6 {
 }
 
 .sidebar-nav .nav-link:hover {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
   background: #f6f9ff;
 }
 
 .sidebar-nav .nav-link:hover i {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .sidebar-nav .nav-link .bi-chevron-down {
@@ -735,7 +765,8 @@ h6 {
   align-items: center;
   font-size: 14px;
   font-weight: 600;
-  color: #012970;
+  color: #000000
+;
   transition: 0.3;
   padding: 10px 0 10px 40px;
   transition: 0.3s;
@@ -750,11 +781,15 @@ h6 {
 
 .sidebar-nav .nav-content a:hover,
 .sidebar-nav .nav-content a.active {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .sidebar-nav .nav-content a.active i {
-  background-color: #4154f1;
+  background-color: #4c9c7c
+
+;
 }
 
 /*--------------------------------------------------------------
@@ -777,7 +812,9 @@ h6 {
 
 .dashboard .filter .icon:hover,
 .dashboard .filter .icon:focus {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .dashboard .filter .dropdown-header {
@@ -805,7 +842,8 @@ h6 {
 
 .dashboard .info-card h6 {
   font-size: 28px;
-  color: #012970;
+  color: #000000
+;
   font-weight: 700;
   margin: 0;
   padding: 0;
@@ -821,7 +859,9 @@ h6 {
 }
 
 .dashboard .sales-card .card-icon {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
   background: #f6f6fe;
 }
 
@@ -901,12 +941,15 @@ h6 {
 }
 
 .dashboard .news h4 a {
-  color: #012970;
+  color: #000000
+;
   transition: 0.3s;
 }
 
 .dashboard .news h4 a:hover {
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .dashboard .news p {
@@ -973,7 +1016,8 @@ h6 {
   background-color: #fff;
   border-radius: 0.25rem;
   text-align: center;
-  color: #012970;
+  color: #000000
+;
   padding: 15px 0;
 }
 
@@ -1022,7 +1066,8 @@ h6 {
 }
 
 .profile .profile-card .social-links a:hover {
-  color: #012970;
+  color: #000000
+;
 }
 
 .profile .profile-overview .row {
@@ -1031,7 +1076,8 @@ h6 {
 }
 
 .profile .profile-overview .card-title {
-  color: #012970;
+  color: #000000
+;
 }
 
 .profile .profile-overview .label {
@@ -1054,7 +1100,9 @@ h6 {
 .faq .basic h6 {
   font-size: 18px;
   font-weight: 600;
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .faq .basic p {
@@ -1071,12 +1119,15 @@ h6 {
 .contact .info-box i {
   font-size: 38px;
   line-height: 0;
-  color: #4154f1;
+  color: #4c9c7c
+
+;
 }
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #012970;
+  color: #000000
+;
   font-weight: 700;
   margin: 20px 0 10px 0;
 }
@@ -1138,7 +1189,9 @@ h6 {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #4154f1;
+  border-color: #4c9c7c
+
+;
 }
 
 .contact .php-email-form input {
@@ -1150,7 +1203,9 @@ h6 {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #4154f1;
+  background: #4c9c7c
+
+;
   border: 0;
   padding: 10px 30px;
   color: #fff;
@@ -1182,7 +1237,9 @@ h6 {
 .error-404 h1 {
   font-size: 180px;
   font-weight: 700;
-  color: #4154f1;
+  color: #4c9c7c
+
+;
   margin-bottom: 0;
   line-height: 150px;
 }
@@ -1190,7 +1247,8 @@ h6 {
 .error-404 h2 {
   font-size: 24px;
   font-weight: 700;
-  color: #012970;
+  color: #000000
+;
   margin-bottom: 30px;
 }
 
@@ -1222,12 +1280,14 @@ h6 {
 
 .footer .copyright {
   text-align: center;
-  color: #012970;
+  color: #000000
+;
 }
 
 .footer .credits {
   padding-top: 5px;
   text-align: center;
   font-size: 13px;
-  color: #012970;
+  color: #000000
+;
 }
